# learnOpenGL

./: .gitignore  CMakeLists.txt  camera.h  glad.c  rectangle.cpp  shader-fragment.glsl  shader-vertex.glsl  shader.cpp  shader.h  triangle.cpp  window.cpp
